--- a/style.css
+++ b/style.css
@@ -223,12 +223,15 @@ footer span.version { display: inline-block; margin-left: 1rem; color: #888; fon
   html, body {
     font-size: 16px;
     overflow: hidden !important;
+    overscroll-behavior: none !important;
+    touch-action: none !important;
     width: 100vw !important;
     height: 100vh !important;
     max-width: 100vw !important;
     max-height: 100vh !important;
     position: fixed !important;
     top: 0; left: 0;
+  }
   }
   #flashcardContainer,
   .big-flashcard,
